integration-layer/api-server.log
/Users/hiroyusai/src/datasov/integration-layer/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/simple-api.ts(308,47): error TS2339: Property 'user' does not exist on type 'Request<{}, any, any, ParsedQs, Record<string, any>>'.

    at createTSError (/Users/hiroyusai/src/datasov/integration-layer/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/hiroyusai/src/datasov/integration-layer/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/hiroyusai/src/datasov/integration-layer/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/hiroyusai/src/datasov/integration-layer/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/hiroyusai/src/datasov/integration-layer/node_modules/ts-node/src/index.ts:1617:30)
    at loadTS (node:internal/modules/cjs/loader:1826:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/hiroyusai/src/datasov/integration-layer/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339 ]
}
